--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 # Ignore node_modules
 node_modules/
+
+# Ignore environment files
+.env
+
+# Ignore system/macOS files
+.DS_Store
+
+# Ignore log files
+logs/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
